Fix EventWebhook callUuid & recordingUuid